--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
   "scripts": {
     "start": " parcel index.html",
     "build": "parcel build index.html --dist-dir ./dist"
-
   },
   "author": "ahmed khairy",
   "license": "ISC",
   "dependencies": {
     "core-js": "^3.37.0",
+    "fraction.js": "^4.3.7",
     "fractional": "^1.0.0",
     "fractional.js": "^1.0.0",
     "install": "^0.13.0",
